--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "wpmu/reset-uf",
     "description": "WPMU UF Reset manager",
+    "version": "1.1.1",
     "repositories": [
         {
             "type": "vcs",
